fix sidebar footer overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@
   
 .sidenav {
     width: 250px;
+    overflow: hidden;
 }
   
 .toolbar-spacer {
