--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -34,13 +34,6 @@
     align-items: center;
   }
   
-  .user-avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 12px;
-  }
-  
   .user-details {
     display: flex;
     flex-direction: column;
@@ -55,4 +48,8 @@
     margin: 0;
     font-size: 0.8rem;
     color: rgba(0, 0, 0, 0.6);
+  }
+
+  .sidebar-footer .mat-icon {
+    margin-right: 15px;
   }
